# nn

./: .clang-format  .gitignore  .prettierrc  CMakeLists.txt  build.sh  model.cpp  nn.cpp  nn.h  requirements.txt  xor.cpp
docs/: introduction.md  model.md  xor.md
nn/: read.py  regress.py  xor.py
